--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "etag": "^1.8.1",
     "express": "^4.18.2",
     "finalhandler": "^1.2.0",
+    "firebase-admin": "^13.2.0",
     "follow-redirects": "^1.15.2",
     "form-data": "^4.0.0",
     "forwarded": "^0.2.0",
@@ -49,6 +50,7 @@
     "mime-types": "^2.1.35",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "nodemon": "^3.1.9",
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
@@ -74,7 +76,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
