--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
     "framer-motion": "^10.16.1",
+    "lucide-react": "^0.501.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
